// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[component] - AddressDetailsView should render as radio button if radio prop is true 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root css-1fuhjh6"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-kbpwk1-MuiFormLabel-root"
          id="kibo-radio-buttons-group-label"
        >
          Your Default Billing Address
        </label>
        <div
          aria-labelledby="payment-details-radio"
          class="MuiFormGroup-root css-dmmspl-MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
          >
            <span
              class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root css-1c2erko-MuiButtonBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-1m9pwf3"
                name="radio-buttons-group"
                type="radio"
                value="1234, My Address1104AustinTexas78727"
              />
              <span
                class="css-hyxlzm"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-ojil4y-MuiTypography-root"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-1a2mweq-MuiTypography-root"
              >
                Primary
              </h6>
              <div
                class="MuiBox-root css-zoser8"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
                >
                  1234, My Address
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
                >
                  apartment1104
                </p>
                <div
                  class="MuiBox-root css-k008qs"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mu12yc-MuiTypography-root"
                  >
                    Austin
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mu12yc-MuiTypography-root"
                  >
                    Texas
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
                  >
                    78727
                  </p>
                </div>
              </div>
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`[component] - AddressDetailsView should render the component 1`] = `
<DocumentFragment>
  <div>
    <div
      class="MuiBox-root css-1fuhjh6"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2 css-1a2mweq-MuiTypography-root"
      >
        Billing Address
      </h6>
      <div
        class="MuiBox-root css-zoser8"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
        >
          1234, My Address
        </p>
        <p
          class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
        >
          apartment1104
        </p>
        <div
          class="MuiBox-root css-k008qs"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-mu12yc-MuiTypography-root"
          >
            Austin
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-mu12yc-MuiTypography-root"
          >
            Texas
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-ojil4y-MuiTypography-root"
          >
            78727
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
